# exness-1

./: .env.example  .gitignore  GOLD_TRADING_AI_TEST_REPORT.md  Gold_Trading_AI_Documentation.html  INSTALLATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_TEST_SUMMARY.md  check_dependencies.py  comprehensive_test_suite.py  create_working_models.py  demo.py  demo_run.py  enhanced_train.py  fix_ai_model.py  install.py  install_linux.sh  install_macos.sh  install_missing.py  install_windows.bat  launch.py  main.py  pyproject.toml  quick_fix_ai_model.py  quick_train.py  requirements-dev.txt  requirements-production.txt  requirements.txt  retrain_compatible.py  setup.py  simple_models.py  test_accuracy_validation.py  test_ai_improvements.py  test_critical_fixes.py  test_gui_interface.py  test_improved_ai_model.py  test_multiple_timeframes.py  test_signal_generation.py  test_trained_models.py  train_ai_models.py  (+1 more)
config/: README.md  model_config.py  settings.yaml
data/: README.md  trading_ai.db
database/: advanced_db_manager.py  gold_trading_ai.db  trading_database.py
docs/: installation.md  performance_validation_report.md  user_guide.md
gui_app/: main_application.py
ml_system/: advanced_trainer.py
models/: cnn_attention.py  high_accuracy_ensemble.py  lstm_transformer.py  meta_learner.py  trained_model_loader.py
modules/: fundamental_analysis.py  gold_trading_analyzer.py  risk_management.py  technical_analysis.py
scripts/: README.md
src/: README.md  __init__.py
src/core/: __init__.py
src/core/models/: __init__.py  model_manager.py
src/gui/: __init__.py
src/utils/: __init__.py  config.py  logger.py
tests/: README.md  comprehensive_tests.py  test_system.py
utils/: accuracy_validator.py  advanced_data_fetcher.py  database_manager.py  feature_aligner.py  feature_engineering.py  performance_monitor.py
